--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <h3>Hello, World! Your OS type is Windows_NT</h3>
-</html>
+
+  <!DOCTYPE html>
+  <html>
+    <h3>Hello, World! Your OS type is Darwin</h3>
+  </html>
